<resources>
    <string name="app_name">CardManager</string>
    <string name="card_manage">卡牌管理</string>
    <string name="history_manage">历史管理</string>
    <string name="manage_system">管理系统</string>
    <string name="title">标题</string>
    <string name="back">返回</string>
    <string name="add">添加</string>
    <string name="add_card">添加卡牌</string>
    <string name="add_history">添加战绩信息</string>
    <string name="userID">用户ID</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="login">登录</string>
    <string name="forget">忘记密码</string>
    <string name="register">注册</string>
    <string name="question">密保问题</string>
    <string name="answer">密保答案</string>
    <string name="yes">确定</string>
    <string name="cancel">取消</string>
    <string name="new_password">新密码</string>
    <string name="repeat_password">重新输入密码</string>
    <string name="logo">标志</string>
    <string name="cardMenu">卡牌管理</string>
    <string name="historyMenu">战绩管理</string>
    <string name="battle_info">对战信息</string>
    <string name="vs">vs</string>
    <string name="winner">胜者</string>
    <string name="time">时间</string>
    <string name="change">修改</string>
    <string name="date">日期</string>
    <string name="datetime">日期时间</string>
    <string name="delete">删除</string>
    <string name="playerA">玩家A</string>
    <string name="playerB">玩家B</string>
    <string name="start">开始游戏</string>
    <string name="information">个人信息</string>
    <string name="cardImage">卡牌图片</string>
    <string name="cardNo">卡牌编号</string>
    <string name="cardName">卡牌名字</string>
    <string name="cardHP">生命值</string>
    <string name="cardAttack">攻击力</string>
    <string name="cardType">卡牌类型</string>
    <string name="cardInfo">卡牌信息</string>
    <string name="historyInfo">历史信息</string>
    <string name="lose">对战失败</string>
    <string name="win">对战胜利</string>
    <string name="change_password">修改密码</string>
    <string name="start_game">开始游戏</string>
    <string name="configure_deck">配置卡组</string>
    <string name="regress">重新登录</string>
    <string name="user_info">用户信息</string>
    <string name="exit">退出游戏</string>
</resources>
