<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scroll_history"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#FFF5F5F5"
    android:scrollbars="vertical">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/hd_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark">

            <RelativeLayout
                android:id="@+id/hd_innerToolBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageButton
                    android:id="@+id/hd_backImageButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:background="@color/colorPrimaryDark"
                    android:contentDescription="@string/back"
                    android:scaleType="centerInside"
                    android:src="@drawable/img_back_small" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorBlack"
                    android:text="@string/historyInfo"
                    android:layout_centerInParent="true"
                    android:textSize="20sp"/>

            </RelativeLayout>

        </android.support.v7.widget.Toolbar>

        <TextView
            android:id="@+id/hd_tvBattle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:text="@string/battle_info"/>

        <RelativeLayout
            android:id="@+id/hd_llPlayers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/hd_playerA"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:drawable/editbox_background"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:gravity="center"
                android:minWidth="120dp"
                android:hint="@string/playerA"/>

            <TextView
                android:id="@+id/hd_vs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/vs"/>

            <EditText
                android:id="@+id/hd_playerB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:drawable/editbox_background"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:gravity="center"
                android:minWidth="120dp"
                android:hint="@string/playerB"/>

        </RelativeLayout>

        <TextView
            android:id="@+id/hd_tvWinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:text="@string/winner" />

        <EditText
            android:id="@+id/hd_etWinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:background="@android:drawable/editbox_background"
            android:hint="@string/winner"/>

        <TextView
            android:id="@+id/hd_tvTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:text="@string/datetime" />

        <TextView
            android:id="@+id/hd_etDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:drawable/edit_text"
            android:gravity="center"
            android:hint="@string/date"/>

        <TextView
            android:id="@+id/hd_etTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:drawable/edit_text"
            android:gravity="center"
            android:hint="@string/time"/>

        <LinearLayout
            android:id="@+id/hd_buttonLayer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:gravity="end">

            <Button
                android:id="@+id/hd_btAdd"
                style="@style/MinButtonTheme"
                android:text="@string/add"/>

        </LinearLayout>

    </LinearLayout>

</ScrollView>