<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dragon"
    android:orientation="vertical"
    android:gravity="center">

    <Button
        android:id="@+id/st_btGame"
        android:background="@drawable/start_bt_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/start_game"/>

    <Button
        android:id="@+id/st_btUserInfo"
        android:background="@drawable/start_bt_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/user_info"/>

    <Button
        android:id="@+id/st_btExit"
        android:background="@drawable/start_bt_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/exit"/>

</LinearLayout>