<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scroll_login"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#FFF5F5F5"
    android:scrollbars="vertical" >

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/inner_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/login_back"
        android:paddingBottom="10dip"
        android:paddingLeft="10dip"
        android:paddingRight="10dip" >

        <ImageView
            android:id="@+id/cgameLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:paddingLeft="20dip"
            android:paddingRight="20dip"
            android:scaleType="centerInside"
            android:src="@drawable/cgame_logo"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:contentDescription="@string/logo">
        </ImageView>

        <RelativeLayout
            android:id="@+id/section1"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_below="@id/cgameLogo"
            android:background="@drawable/content_bg"
            android:paddingTop="5dip" >

            <TextView
                android:id="@+id/l_section1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/login" />

            <RelativeLayout
                android:id="@+id/wrapper"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:layout_below="@id/l_section1" >

                <EditText
                    android:id="@+id/EditTextUserID"
                    style="@style/SingleLineTheme"
                    android:hint="@string/userID"
                    android:inputType="text"
                    android:text="" >
                </EditText>

                <EditText
                    android:id="@+id/EditTextPassword"
                    style="@style/SingleLineTheme"
                    android:layout_below="@id/EditTextUserID"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:text="" >
                </EditText>

                <Button
                    android:id="@+id/btnLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/EditTextPassword"
                    android:background="@drawable/wp_button_small"
                    android:text="@string/login"
                    >
                </Button>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/btnLogin"
                    android:gravity="center_horizontal"
                    android:paddingBottom="30dip"
                    android:paddingTop="30dip" >

                    <Button
                        android:id="@+id/btnForget"
                        style="@style/MinButtonTheme"
                        android:text="@string/forget"
                        />

                    <Button
                        android:id="@+id/btnRegister"
                        style="@style/MinButtonTheme"
                        android:text="@string/register"
                        >
                    </Button>
                </LinearLayout>
            </RelativeLayout>
        </RelativeLayout>
    </RelativeLayout>

</ScrollView>